--- a/docs/package.json
+++ b/docs/package.json
@@ -87,6 +87,7 @@
     "contentlayer": "^0.2.4",
     "date-fns": "^2.28.0",
     "playroom": "^0.27.9",
+    "react-docgen": "^5.4.0",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "typescript": "4.4.3"
