--- a/docs/package.json
+++ b/docs/package.json
@@ -83,6 +83,7 @@
     "next-contentlayer": "^0.2.5",
     "playroom": "^0.27.9",
     "postcss": "^8.4.5",
+    "react-docgen": "^5.4.0",
     "rehype-slug": "^5.0.1",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
