--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,6 +22,7 @@
   "engines": {
     "node": ">= 14.13"
   },
+  "componentMaturityStatus": "Experimental",
   "preconstruct": {
     "entrypoints": [
       "index.ts",
