--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -18,6 +18,7 @@
     "@spark-web/text": "^1.0.4",
     "@spark-web/text-input": "^1.1.1",
     "@spark-web/theme": "^3.0.0",
+    "@spark-web/utils": "^1.1.2",
     "react-select": "^5.3.1"
   },
   "devDependencies": {
