--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -14,6 +14,7 @@
     "@spark-web/box": "^1.0.5",
     "@spark-web/control-label": "^1.0.5",
     "@spark-web/field": "^2.0.0",
+    "@spark-web/fieldset": "^1.1.0",
     "@spark-web/stack": "^1.0.5",
     "@spark-web/text": "^1.0.5",
     "@spark-web/theme": "^3.0.1"
